--- a/app.json
+++ b/app.json
@@ -30,6 +30,9 @@
         },
         {
             "name": "networking"
+        },
+        {
+            "name": "slashcommand"
         }
     ],
     "implements": [
